fix(#14): downgrade source and target